--- a/package.json
+++ b/package.json
@@ -9,12 +9,19 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "axios": "^1.11.0",
+    "formik": "^2.4.6",
+    "next": "15.4.6",
     "react": "19.1.0",
     "react-dom": "19.1.0",
-    "next": "15.4.6"
+    "sweetalert2": "^11.22.4",
+    "yup": "^1.7.0"
   },
   "devDependencies": {
+    "@eslint/eslintrc": "^3",
     "@tailwindcss/postcss": "^4",
+    "eslint": "^9.33.0",
+    "eslint-config-next": "^15.4.6",
     "tailwindcss": "^4"
   }
 }
